--- a/.npmrc
+++ b/.npmrc
@@ -2,11 +2,10 @@ engine-strict=true
 auto-install-peers=true
 shamefully-hoist=true
 strict-peer-dependencies=false
-save-package-manager = false
-
-# 强制使用 pnpm
-engine-strict=true
-use-pnpm=true
+node-linker=hoisted
+save-workspace-protocol=false
+save-prefix=''
+package-manager=false
 
 # 设置 scope
-@mcpmarket:registry=https://registry.npmjs.org/ 
+@mcpmarket:registry=https://registry.npmjs.org/
