--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mcpmarket",
   "version": "1.0.0",
   "description": "A collection of MCP servers for Minecraft",
+  "type": "module",
   "private": true,
   "workspaces": [
     "packages/*",
@@ -50,11 +51,13 @@
     "@typescript-eslint/parser": "^8.27.0",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-import-resolver-typescript": "4.2.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
     "husky": "^8.0.0",
     "lint-staged": "^15.5.0",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "typescript": "^5.3.3"
   },
   "lint-staged": {
     "packages/**/*.{js,jsx,ts,tsx}": [
@@ -64,5 +67,6 @@
     "*.{json,md,yml,yaml}": [
       "prettier --write"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.4.1"
 }
