chore: refactor mcp-auto-install package and update configurations
- Renamed mcp-auto-install to @mcpmarket/mcp-auto-install
- Updated package.json with new versioning and publish configuration
- Enhanced README with features, installation, and usage instructions
- Improved CLI commands and added command configuration options
- Removed unnecessary files and updated .npmrc settings
- Adjusted ESLint configuration for better code quality
- Added new script for single package publishing
- Updated TypeScript configuration for better compatibility

--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "build": "pnpm -r build",
     "clean": "pnpm -r clean",
     "list": "pnpm list --recursive",
-    "publish:all": "pnpm publish -r --access public",
-    "publish:single": "pnpm publish --filter {package} --access public",
-    "version:all": "pnpm version:bump -r",
+    "publish:all": "pnpm publish -r changeset publish",
+    "publish:single": "cross-env PACKAGE=$1 pnpm --filter $PACKAGE execchangeset publish",
     "changeset": "changeset",
     "version": "changeset version",
     "release": "pnpm build && pnpm publish:all",
@@ -47,8 +46,10 @@
     "@changesets/cli": "^2.28.1",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@typescript-eslint/parser": "^8.27.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-import-resolver-typescript": "4.2.2",
@@ -57,6 +58,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "lint-staged": {
