--- a/packages/mcp-auto-install/package.json
+++ b/packages/mcp-auto-install/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@mcpmarket/mcp-auto-install",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "MCP server that helps install other MCP servers automatically",
   "type": "module",
   "main": "dist/index.js",
   "bin": {
-    "mcp-auto-install": "dist/index.js"
+    "mcp-auto-install": "./dist/index.js"
   },
   "publishConfig": {
     "access": "public"
