--- a/package.json
+++ b/package.json
@@ -42,13 +42,20 @@
     "url": "https://github.com/CherryHQ/mcpmarket/issues"
   },
   "homepage": "https://github.com/CherryHQ/mcpmarket#readme",
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.8.0"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@types/node": "^20.10.5",
+    "@types/chai": "^5.2.1",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^20.17.24",
+    "@types/sinon": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@typescript-eslint/parser": "^8.27.0",
+    "chai": "^5.2.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
@@ -57,9 +64,11 @@
     "eslint-plugin-prettier": "^5.2.3",
     "husky": "^8.0.0",
     "lint-staged": "^15.5.0",
+    "mocha": "^11.1.0",
     "prettier": "^3.5.3",
+    "sinon": "^20.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.2"
   },
   "lint-staged": {
     "packages/**/*.{js,jsx,ts,tsx}": [
