chore: update mcp-auto-install package to version 0.1.7
- Added esbuild for dependency bundling
- Updated build process to include esbuild
- Revised README to reflect new build output structure
- Updated version in package.json and CLI to 0.1.7

--- a/packages/mcp-auto-install/package.json
+++ b/packages/mcp-auto-install/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@mcpmarket/mcp-auto-install",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "MCP server that helps install other MCP servers automatically",
   "type": "module",
   "main": "./dist/index.js",
-  "bin": "./dist/index.js",
+  "bin": {
+    "mcp-auto-install": "./dist/index.js",
+    "mcp-auto-install-lib": "./dist/lib/index.js"
+  },
   "exports": {
     ".": "./dist/index.js"
   },
@@ -17,7 +20,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && node build.js",
     "start": "node dist/index.js",
     "dev": "ts-node --esm src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
