--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@typescript-eslint/parser": "^8.27.0",
     "chai": "^5.2.0",
     "cross-env": "^7.0.3",
+    "esbuild": "^0.25.2",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-import-resolver-typescript": "4.2.2",
