--- a/packages/mcp-auto-install/package.json
+++ b/packages/mcp-auto-install/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@mcpmarket/mcp-auto-install",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "MCP server that helps install other MCP servers automatically",
   "type": "module",
   "main": "./dist/index.js",
   "bin": "./dist/index.js",
   "exports": {
-    ".": "./dist/index.js"
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
   },
   "publishConfig": {
     "access": "public"
@@ -17,7 +20,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsc --noEmit && node build.js",
+    "build": "tsc && node build.js",
     "start": "node dist/index.js",
     "dev": "ts-node --esm src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -36,7 +39,7 @@
   "author": "whatprototype",
   "license": "MIT",
   "dependencies": {
-    "commander": "^11.1.0",
+    "cac": "^6.7.14",
     "npx-scope-finder": "^1.3.0",
     "zod": "^3.22.4",
     "@modelcontextprotocol/sdk": "^1.8.0"
